--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "babel-eslint": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.7.0",
+    "firebase-functions": "^3.13.2"
   }
 }
