--- a/app/api/reward/models/reward.settings.json
+++ b/app/api/reward/models/reward.settings.json
@@ -24,7 +24,11 @@
       "unique": true
     },
     "redeemed": {
-      "type": "boolean"
+      "type": "boolean",
+      "default": false
+    },
+    "prize": {
+      "model": "prizes"
     }
   }
 }
