--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.6.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "strapi": "3.6.2",
     "strapi-admin": "3.6.2",
     "strapi-connector-mongoose": "3.6.2",
