change email to Sengrid + status response

--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,11 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/underscore": "^1.11.2"
+  },
   "dependencies": {
     "handlebars": "^4.7.7",
-    "nodemailer": "^6.6.1",
-    "nodemailer-smtp-transport": "^2.7.4",
     "strapi": "3.6.2",
     "strapi-admin": "3.6.2",
     "strapi-connector-mongoose": "3.6.2",
@@ -23,7 +23,9 @@
     "strapi-plugin-email": "3.6.2",
     "strapi-plugin-upload": "3.6.2",
     "strapi-plugin-users-permissions": "3.6.2",
-    "strapi-utils": "3.6.2"
+    "strapi-provider-email-sendgrid": "^3.6.3",
+    "strapi-utils": "3.6.2",
+    "underscore": "^1.13.1"
   },
   "author": {
     "name": "A Strapi developer"
