response codes + cleanup + .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      SENGRID_API_KEY: ${SENGRID_API_KEY}
+      SENGRID_EMAIL_FROM: ${SENGRID_EMAIL_FROM}
+      SENGRID_DEFAULT_REPLY: ${SENGRID_DEFAULT_REPLY}
+      SENGRID_TEST_ACCOUNT: ${SENGRID_TEST_ACCOUNT}
     networks:
       - strapi-app-network
     volumes:
