--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,7 @@ jobs:
           cd strapi
           docker-compose down
           git pull
+          cd app
+          npm install -y
+          cd ..
           docker-compose up -d
