--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,15 +36,27 @@ services:
     volumes:
       - strapidata:/data/db
   
+  # webserver:
+  #   image: nginx:alpine
+  #   container_name: webserver
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx/conf.d/:/etc/nginx/conf.d/
+  #   networks:
+  #     - strapi-app-network
+  
   webserver:
-    image: nginx:alpine
+    build:
+      context: ../ruleta/.
+      dockerfile: ../ruleta/Dockerfile
     container_name: webserver
-    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx/conf.d/:/etc/nginx/conf.d/
+    restart: always
     networks:
       - strapi-app-network
 
