--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,11 +1,26 @@
 # web service1 config.
 server {
     listen 80;
-    #listen 443 ssl http2;
     server_name ruleta-web;
 
-    location / {
+    # location / {
+    #     proxy_pass http://strapi:1337;
+    # }
+
+    # Strapi API and Admin
+    location /api/ {
+        rewrite ^/api/?(.*)$ /$1 break;
         proxy_pass http://strapi:1337;
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass_request_headers on;
     }
 
 }
