--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@types/underscore": "^1.11.2"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "handlebars": "^4.7.7",
     "node-fetch": "^2.6.1",
     "strapi": "3.6.2",
